--- a/presid.html
+++ b/presid.html
@@ -3,41 +3,18 @@
     <head>
         <meta charset="utf-8" />
         <title>공모전_조이름</title>
-        <style>
-            ul {
-                background-color: #FFDAB9;
-                list-style-type: none;
-                margin: 0;
-                padding: 0;
-                overflow: hidden;
-            }
-            li {float: left;}
-            li a {
-                display: block;
-                background-color: #FFDAB9;
-                color: #000;
-                padding: 12px;
-                text-decoration: none;
-                text-align: center;
-                letter-spacing: 20px;
-            }
-            li a:hover {
-                background-color: #cd853f;
-                color: white;
-            }
-        </style>
-        
+        <link rel="stylesheet" href="css/presid.css" />
     </head>
-
+    <script type="text/javascript" src="js/presid.js"></script>
     <body>
-        <h5>제목</h5>
+        <h5>정치후원금(임시) 배경및 이미지첨부</h5>
         <ul>
             <li><a href="/korea.html">한국</a></li>
-            <li><a href="/presid.html">대통령</a></li>
-            <li><a href="/korea.html">홈3</a></li>
-            <li><a href="/korea.html">홈4</a></li>
+            <li><a href="/presid.html">대통령(공사중)</a></li>
+            <li><a href="/korea.html">임시</a></li>
+            <li><a href="/korea.html">임시2</a></li>
         </ul>
-        <div id="Detail">box</div>
+        <div id="Detail">대통령1 2 3</div>
     </body>
       
 </html>
