--- a/korea.html
+++ b/korea.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>공모전_조이름</title>
+    <title>동아대 빅데이터</title>
     <link rel="stylesheet" href="css/korea.css" />
 </head>
 
@@ -11,17 +11,25 @@
 <script type="text/javascript" src="js/korea.js"></script>
 
 <body>
-    <h5>정치후원금(임시) 배경및 이미지첨부</h5>
+    <h5>오픈와치 정치후원금</h5>
     <ul>
         <li><a href="/korea.html">한국</a></li>
-        <li><a href="/presid.html">대통령(공사중)</a></li>
-        <li><a href="/korea.html">임시</a></li>
-        <li><a href="/korea.html">임시2</a></li>
+        <li><a href="/presid.html">대통령</a></li>
     </ul>
+    <div id="2012" style="display: flex; align-items: center;">
+    <div style="padding: 20px"></div>
     <div>
     <div id="gis-container"></div>
     <div id="image-container"></div>
 </div>
+</div>
+<br>
+<br>
+<br>
+<footer>
+    <hr>
+    <div id="foot" style="padding:40px; background-color: rgb(55, 155, 15); align-content: center;"> 동아대학교 빅데이터 동아리 일동</div>
+</footer>
 </body>
 
 </html>
