--- a/korea.html
+++ b/korea.html
@@ -11,13 +11,14 @@
 <script type="text/javascript" src="js/korea.js"></script>
 
 <body>
-    <h5>오픈와치 정치후원금</h5>
+    <h3>오픈와치의 데이터와 API를 활용한 다양한 아이디어와 분석 콘텐츠를 공모합니다! </h3>
     <ul>
         <li><a href="/korea.html">한국</a></li>
         <li><a href="/presid.html">대통령</a></li>
+        <li><a href="polity.html">국회의원</a></li>
     </ul>
     <div id="2012" style="display: flex; align-items: center;">
-    <div style="padding: 20px"></div>
+    <div style="padding: 10px"></div>
     <div>
     <div id="gis-container"></div>
     <div id="image-container"></div>
@@ -28,7 +29,12 @@
 <br>
 <footer>
     <hr>
-    <div id="foot" style="padding:40px; background-color: rgb(55, 155, 15); align-content: center;"> 동아대학교 빅데이터 동아리 일동</div>
+    <div id="foot" style="padding:40px; 
+    background-color: rgb(55, 155, 15); 
+    align-content: center;"> 
+        <img src="img/donga.png">
+        <img src="img/opwa.png"> 
+    </div>
 </footer>
 </body>
 
