--- a/presid.html
+++ b/presid.html
@@ -7,10 +7,11 @@
     </head>
     <script type="text/javascript" src="js/presid.js"></script>
     <body>
-        <h5>오픈와치 정치후원금</h5>
+        <h3>오픈와치의 데이터와 API를 활용한 다양한 아이디어와 분석 콘텐츠를 공모합니다! </h3>
         <ul>
             <li><a href="/korea.html">한국</a></li>
             <li><a href="/presid.html">대통령</a></li>
+            <li><a href="polity.html">국회의원</a></li>
         </ul>
         <div id="2012" style="display: flex; align-items: center;">
     <div style="padding: 80px;"></div>
@@ -23,7 +24,7 @@
                 대한민국 18대 대통령 박근혜
                 <hr>
                 <button type="button" id="2012pp" onclick="Ashow()">
-                    <img src="img/2012_p.png" width="200px" height="200px">
+                    <img src="img/2012_pp.png" width="200px" height="200px">
                 </button>
             </div>
             <div style="margin-left: 20px; background-color: antiquewhite;">
@@ -42,7 +43,7 @@
                 대한민국 19대 대통령 문재인
                 <hr>
                 <button type="button" id="2017pp" onclick="Bshow()">
-                    <img src="img/2017_p.png" width="200px" height="200px">
+                    <img src="img/2017_pp.png" width="200px" height="200px">
                 </button>
             </div>
             <div style="margin-left: 20px; background-color: antiquewhite;">
@@ -61,7 +62,7 @@
         대한민국 20대 대통령 윤석열
         <hr>
         <button type="button" id="2022pp" onclick="Cshow()">
-            <img src="img/2022_p.png" width="200px" height="200px">
+            <img src="img/2022_pp.png" width="200px" height="200px">
         </button>
     </div>
     <div style="margin-left: 20px; background-color: antiquewhite;">
@@ -84,7 +85,12 @@
 <br>
 <footer>
     <hr>
-    <div id="foot" style="padding:40px; background-color: rgb(55, 155, 15); align-content: center;"> 동아대학교 빅데이터 동아리 일동</div>
+    <div id="foot" style="padding:40px; 
+    background-color: rgb(55, 155, 15); 
+    align-content: center;"> 
+        <img src="img/donga.png">
+        <img src="img/opwa.png"> 
+    </div>
 </footer>
     </body>
 </html>
