--- a/korea.html
+++ b/korea.html
@@ -13,9 +13,9 @@
 <body>
     <h3>오픈와치의 데이터와 API를 활용한 정치 후원금 분석 콘텐츠를 공모합니다! </h3>
     <ul>
-        <li><a href="/korea.html">년도별 시도 후원금</a></li>
-        <li><a href="/presid.html">역대 대통령 후원금</a></li>
-        <li><a href="polity.html">년도별 국회의원 후원금</a></li>
+        <li><a href="/korea.html">시도별</a></li>
+        <li><a href="/presid.html">대통령</a></li>
+        <li><a href="polity.html">국회의원</a></li>
     </ul>
     <div id="2012" style="display: flex; align-items: center;">
     <div style="padding: 10px"></div>
@@ -33,9 +33,9 @@
     background-color: rgb(55, 155, 15); 
     display: flex;
     align-content: center;"> 
-        <img src="img/donga.png">
-        <div>&nbsp 정대원<br>&nbsp 응용생물공학과 1819281 이진호<br>&nbsp 기계공학과 1827744 김수겸</div>
-    </div>
+        <img src="img/donga.png" style="padding: 10px;">
+        <div style="padding: 10px;">&nbsp; 정대원<br><br>&nbsp; 응용생물공학과 1819281 이진호<br><br>&nbsp; 기계공학과 1827744 김수겸</div>
+        <img src="img/opwa.png" style="padding: 10px;">
 </footer>
 </body>
 
