--- a/presid.html
+++ b/presid.html
@@ -9,9 +9,10 @@
     <body>
         <h3>오픈와치의 데이터와 API를 활용한 정치 후원금 분석 콘텐츠를 공모합니다! </h3>
         <ul>
-            <li><a href="/korea.html">년도별 시도 후원금</a></li>
-            <li><a href="/presid.html">역대 대통령 후원금</a></li>
-            <li><a href="polity.html">년도별 국회의원 후원금</a></li>
+            <li><a href="/korea.html">시도별</a></li>
+            <li><a href="/presid.html">대통령</a></li>
+            <li><a href="polity.html">국회의원</a></li>
+            <li>&nbsp;&nbsp;*초상화를 눌러보세요*</li>
         </ul>
         <div id="2012" style="display: flex; align-items: center;">
     <div style="padding: 80px;"></div>
@@ -24,7 +25,7 @@
                 대한민국 18대 대통령 박근혜
                 <hr>
                 <button type="button" id="2012pp" onclick="Ashow()">
-                    <img src="img/2012_pp.png" width="200px" height="200px">
+                    <img src="img/2012_pp.png" title="클릭하세요" width="200px" height="200px">
                 </button>
             </div>
             <div style="margin-left: 20px; background-color: antiquewhite;">
@@ -43,7 +44,7 @@
                 대한민국 19대 대통령 문재인
                 <hr>
                 <button type="button" id="2017pp" onclick="Bshow()">
-                    <img src="img/2017_pp.png" width="200px" height="200px">
+                    <img src="img/2017_pp.png" title="클릭하세요" width="200px" height="200px">
                 </button>
             </div>
             <div style="margin-left: 20px; background-color: antiquewhite;">
@@ -62,7 +63,7 @@
         대한민국 20대 대통령 윤석열
         <hr>
         <button type="button" id="2022pp" onclick="Cshow()">
-            <img src="img/2022_pp.png" width="200px" height="200px">
+            <img src="img/2022_pp.png" title="클릭하세요" width="200px" height="200px">
         </button>
     </div>
     <div style="margin-left: 20px; background-color: antiquewhite;">
@@ -89,9 +90,9 @@
     background-color: rgb(55, 155, 15); 
     display: flex;
     align-content: center;"> 
-        <img src="img/donga.png"> 
-        <div>&nbsp 정대원<br>&nbsp 응용생물공학과 1819281 이진호<br>&nbsp 기계공학과 1827744 김수겸</div>
-    </div>
+        <img src="img/donga.png" style="padding: 10px;">
+        <div style="padding: 10px;">&nbsp; 정대원<br><br>&nbsp; 응용생물공학과 1819281 이진호<br><br>&nbsp; 기계공학과 1827744 김수겸</div>
+        <img src="img/opwa.png" style="padding: 10px;">
 </footer>
 </body>
 
